<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_player2_true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_true"
                android:rotation="180"/>

            <Button
                android:id="@+id/button_player2_false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_false"
                android:rotation="180"/>

        </LinearLayout>

        <com.example.nurhazim.i_recall.NoSwipeViewPager
            android:id="@+id/pager_player2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:rotation="180">

        </com.example.nurhazim.i_recall.NoSwipeViewPager>

        <TextView
            android:id="@+id/player2_score_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beginning_score"
            android:gravity="center"
            android:rotation="180"/>

        <TextView
            android:id="@+id/player1_score_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/beginning_score"/>

        <com.example.nurhazim.i_recall.NoSwipeViewPager
            android:id="@+id/pager_player1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </com.example.nurhazim.i_recall.NoSwipeViewPager>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_player1_false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_false"/>

            <Button
                android:id="@+id/button_player1_true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_true"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/tie_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tie"
        android:layout_gravity="center|center"
        android:background="@null"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/winner_image"
        android:src="@drawable/winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center"
        android:background="@null"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/image_evaluation_player1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@null"
        android:layout_marginTop="200dp"
        android:layout_gravity="center|center"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/image_evaluation_player2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:rotation="180"
        android:background="@null"
        android:layout_marginBottom="200dp"
        android:layout_gravity="center|center"
        android:visibility="gone"/>

</FrameLayout>